conformance/1.0.0-beta/expected/errors/extra-space-before-pipe.cdx
<ExpectedError category=~syntax reason=~gloss-syn-extra-space-before-pipe/>
